# shardlm

./: .gitignore  ANONYMOUS_SUBMISSION.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  test_batched_e2e.py  test_batched_prefill.py  test_e2e_generation.py  test_full_e2e.py  test_gpu_e2e.py  test_gpu_prefill_v2.py  test_kv_cache.py
benchmark_results/: summary_report.txt  v2_benchmark.json  v3-cc_benchmark.json  v3-mpc_benchmark.json  v3_benchmark.json  v3_cc_benchmark.json
benchmark_results/14b_model/: v3-ot_14b_status_report.json
benchmark_results/7b_model/: v3-ot_1_5b_benchmark.json  v3-ot_7b_benchmark.json
benchmark_results/all_variants/: v2_benchmark.json  v3-cc_benchmark.json  v3-mpc_benchmark.json  v3-ot_benchmark.json  v3_benchmark.json
benchmark_results/e2e/: v2_e2e.json  v3-cc_e2e.json  v3-mpc_e2e.json  v3_e2e.json
benchmarks_results/: latest
benchmarks_results/20260114_222437/: shardlm-ot_cargo_bench.txt  shardlm-v2-core_cargo_bench.txt  shardlm-v2-sharing_cargo_bench.txt  summary.txt  system_info.txt  v2_benchmark.txt  v3-cc_benchmark.txt  v3-mpc_benchmark.txt  v3-ot_benchmark.txt  v3_benchmark.txt
benchmarks_results/20260114_223241/: shardlm-ot_cargo_bench.txt  shardlm-v2-core_cargo_bench.txt  shardlm-v2-sharing_cargo_bench.txt  summary.txt  system_info.txt  v2_benchmark.json  v2_benchmark.txt  v3-cc_benchmark.json  v3-cc_benchmark.txt  v3-mpc_benchmark.json  v3-mpc_benchmark.txt  v3-ot_benchmark.json  v3-ot_benchmark.txt  v3_benchmark.json  v3_benchmark.txt
benchmarks_results/20260114_224009/: shardlm-ot_cargo_bench.txt  shardlm-v2-core_cargo_bench.txt  shardlm-v2-sharing_cargo_bench.txt  summary.txt  system_info.txt  v2_benchmark.json  v2_benchmark.txt  v3-cc_benchmark.json  v3-cc_benchmark.txt  v3-mpc_benchmark.json  v3-mpc_benchmark.txt  v3-ot_benchmark.json  v3-ot_benchmark.txt  v3_benchmark.json  v3_benchmark.txt
benchmarks_results/20260114_230207/: system_info.txt
benchmarks_results/20260114_230602/: system_info.txt
benchmarks_results/20260114_231827_7b/: system_info.txt  v2_benchmark.json  v2_benchmark.txt  v3-cc_benchmark.json  v3-cc_benchmark.txt  v3-mpc_benchmark.json  v3-mpc_benchmark.txt  v3-ot_benchmark.json  v3-ot_benchmark.txt  v3_benchmark.json  v3_benchmark.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/fixed_point/: Cargo.toml
crates/fixed_point/src/: error.rs  fixed.rs  lib.rs  vector.rs
crates/harness/: Cargo.toml
crates/harness/src/: error.rs  lib.rs  pipeline.rs  plaintext.rs  secure.rs
crates/harness/tests/: integration_tests.rs
crates/model/: Cargo.toml
crates/model/src/: config.rs  embedding.rs  error.rs  lib.rs  loader.rs  rope.rs  rope_hf_parity.rs  tokenizer.rs  transformer.rs  weights.rs
crates/ot/: Cargo.toml
crates/ot/src/: adversarial_tests.rs  error.rs  extension.rs  iknp.rs  lib.rs  receiver.rs  sender.rs  session.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: constants.rs  error.rs  frame.rs  header.rs  lib.rs  messages.rs
crates/protocol/src/messages/: base_ot.rs  embed_fetch.rs  error_msg.rs  session_init.rs  session_params.rs  session_ready.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  session.rs  state.rs
crates/server/src/routes/: health.rs  inference.rs  mod.rs  ot.rs  session.rs
crates/sharing/: Cargo.toml
crates/sharing/src/: attention.rs  error.rs  ffn.rs  kv_cache.rs  lib.rs  linear.rs  linear_adversarial_tests.rs  matrix.rs  projection.rs  rmsnorm.rs  rope.rs  share.rs  transformer.rs
crates/sharing/tests/: e2e_inference_test.rs
crates/v2/cc/: Cargo.toml
crates/v2/cc/src/: attestation.rs  encrypted_tensor.rs  error.rs  lib.rs  nvidia_cc.rs  software_cc.rs
crates/v2/client/: Cargo.toml
crates/v2/client/src/: benchmark.rs  error.rs  inference.rs  lib.rs  main.rs  session.rs
crates/v2/core/: Cargo.toml
crates/v2/core/examples/: cuda_check.rs
crates/v2/core/src/: comm.rs  config.rs  error.rs  gpu.rs  kernel.rs  lib.rs  memory.rs  model.rs  parallel.rs  quantization.rs  tensor.rs
crates/v2/model/: Cargo.toml
crates/v2/model/examples/: inference.rs  load_optimized.rs  load_sharded.rs
crates/v2/model/src/: distributed.rs  error.rs  kv_cache.rs  lib.rs  loader.rs  optimized_loader.rs  sharded_loader.rs  tokenizer.rs  transformer.rs  weight_cache.rs
crates/v2/protocol/: Cargo.toml
crates/v2/protocol/src/: constants.rs  error.rs  header.rs  lib.rs  messages.rs
crates/v2/server/: Cargo.toml
crates/v2/server/src/: config.rs  error.rs  lib.rs  main.rs  secure_weights.rs  state.rs
crates/v2/server/src/routes/: binary_protocol.rs  health.rs  inference.rs  mod.rs  secure_inference.rs  secure_inference_cc.rs  secure_inference_mpc.rs  secure_inference_ot.rs  session.rs  ws_streaming.rs
crates/v2/sharing/: Cargo.toml
crates/v2/sharing/src/: attention.rs  beaver.rs  error.rs  lib.rs  secure.rs  secure_attention.rs  secure_ffn.rs  secure_linear.rs  secure_nonlinear.rs  secure_nonlinear_gpu.rs  secure_nonlinear_mpc.rs  secure_nonlinear_mpc_gpu.rs  secure_nonlinear_ot.rs  secure_ot.rs  secure_polynomial.rs  security_assertions.rs  share.rs
crates/wasm-client/: Cargo.toml
crates/wasm-client/src/: client.rs  error.rs  lib.rs  timings.rs  transport.rs
crates/wasm-client/tests/: web.rs
docs/: BENCHMARKS.md  BENCHMARKS_7B.md  HARDWARE_REQUIREMENTS.md  MULTI_GPU_INFERENCE_STATUS.md  RUNNING_EACH_VERSION.md  SCALING_ANALYSIS.md  V2_SECURITY_MODEL.md  V3_OT_BENCHMARK_REPORT.md  V3_REFERENCE_IMPLEMENTATION.md
scripts/: run_benchmarks.sh  run_examples.sh  run_tests.sh  setup_nvidia_machine.sh
