[workspace]
resolver = "2"
members = [
    # v1 crates (Qwen 2.5 1.5B, CPU)
    "crates/protocol",
    "crates/fixed_point",
    "crates/sharing",
    "crates/ot",
    "crates/model",
    "crates/harness",
    "crates/cli",
    "crates/server",
    "crates/wasm-client",
    # v2 crates (GPU-accelerated, CUDA)
    "crates/v2/core",
    "crates/v2/sharing",
    "crates/v2/protocol",
    "crates/v2/model",
    "crates/v2/server",
    "crates/v2/client",
    "crates/v2/cc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ShardLM Contributors"]

[workspace.dependencies]
# Serialization
byteorder = "1.5"

# CRC
crc32fast = "1.3"

# Random
rand = "0.8"
rand_chacha = "0.3"

# Crypto
sha2 = "0.10"
aes = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Testing
proptest = "1.4"

# Async (for future networking)
tokio = { version = "1", features = ["full"] }

# Model loading
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tokenizer
tokenizers = "0.21"

# v2 dependencies (CUDA/GPU)
# Use cuda-version-from-build-system to auto-detect CUDA version
cudarc = { version = "0.12", features = ["cuda-version-from-build-system"] }
half = "2.4"
memmap2 = "0.9"
toml = "0.8"
