[package]
name = "shardlm-ot"
version.workspace = true
edition.workspace = true

[dependencies]
shardlm-protocol = { path = "../protocol" }
shardlm-fixed-point = { path = "../fixed_point" }
rand.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
aes.workspace = true
thiserror.workspace = true
zeroize.workspace = true

# Elliptic curve for base OT
curve25519-dalek = { version = "4", features = ["rand_core", "zeroize"] }

# Getrandom for WASM support (js feature needed for browser)
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
wasm = ["getrandom/js"]
