[package]
name = "shardlm-wasm-client"
version.workspace = true
edition.workspace = true
description = "ShardLM WebAssembly client SDK for browser-side secure inference"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "1.0"

# Internal crates
shardlm-protocol = { path = "../protocol" }
shardlm-ot = { path = "../ot", features = ["wasm"] }
shardlm-fixed-point = { path = "../fixed_point" }

# Logging for WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Getrandom for WASM
getrandom = { version = "0.2", features = ["js"] }

# UUID parsing (js feature needed for WASM)
uuid = { version = "1.6", features = ["v4", "serde", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
