[package]
name = "shardlm-v2-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless client for ShardLM V2 benchmarking"

[[bin]]
name = "shardlm-v2-client"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Timing
chrono = { version = "0.4", features = ["serde"] }

# Progress/Terminal
indicatif = "0.17"
console = "0.15"

# Random (for secret sharing)
rand = { workspace = true }

# Statistics
statrs = "0.18"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
