[package]
name = "shardlm-v2-core"
version.workspace = true
edition.workspace = true
description = "ShardLM v2 Core - Production-grade privacy-preserving inference for Llama 70B"

[features]
default = ["cpu"]
cuda = ["dep:cudarc"]
cpu = []

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

# GPU support
cudarc = { version = "0.12", optional = true, features = ["cuda-version-from-build-system", "cublas"] }
half = "2.4"  # FP16 support

# Parallel processing for CPU quantization
rayon = "1.10"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Logging
tracing = "0.1"

[dev-dependencies]
proptest.workspace = true
